2003-11-10  Matt Austern  <austern@apple.com>

	* config/darwin-protos.h (darwin_assemble_visibility): Declare.
	* config/darwin.c (darwin_assemble_visibility): Define.  Warn for
	anything other than VISIBILITY_DEFAULT and VISIBILITY_HIDDEN.
	* config/darwin.h (TARGET_ASM_ASSEMBLE_VISIBILITY): Use
	darwin_assemble_visibility instead of default.
	
2003-11-10  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	PR target/12865
	* config/sparc/sparc.c (sparc_initialize_trampoline): Call
	__enable_execute_stack only after writing onto the stack.
	(sparc64_initialize_trampoline): Likewise.

2003-11-09  Roger Sayle  <roger@eyesopen.com>

	* loop.c (check_dbra_loop): Try swapping the comparison operands
	of the loop condition to identify a suitable induction variable.
	* unroll.c (loop_iterations): Likewise.

2003-11-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* config/sparc/sparc.h (TARGET_CPU_CPP_BUILTINS): Fix sparc vs
	sparc64 #cpu and #machine assertions.

2003-11-09  Richard Henderson  <rth@redhat.com>

	* Makefile.in (rtlanal.o): Depend on BASIC_BLOCK_H.

2003-11-09  Jan Hubicka  <jh@suse.cz>

	* tree-optimize.c (tree_rest_of_compilation): Fix warning.

	* cgraphunit.c (cgraph_expand_function): Use
	cgraph_possibly_inlined_p.
	* tree-optimize.c (tree_rest_of_compilation): Do not kill saved tree.

	* opts.c (common_handle_option): Do not set max-inline-insns.
	* params.def: Update comments.
	(PARAM_MAX_INLINE_INSNS): Kill.
	* invoke.texi (max-inline-insns): Kill.

2003-11-08  Joseph S. Myers  <jsm@polyomino.org.uk>

	PR c/3190
	PR c/8714
	* c-format.c (set_Wformat): Do not enable -Wformat-y2k by default.
	* invoke.texi: Update.

2003-11-08  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>

	PR optimization/12630
	* pa.c (compute_movstrsi_length): Rename to compute_movstr_length.
	Handle length computation 64-bit moves.
	(compute_clrstr_length, output_block_clear): Implement block clear.
	(output_block_move): Handle 64-bit moves.